updated_the_html_pages

--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>KapitalMultiplier – Buy & Sell Property on Yamuna Expressway</title>
-    <meta
-      name="title"
-      content="KapitalMultiplier – Buy & Sell Property on Yamuna Expressway"
-    />
+    <title>Uro-scan</title>
+    <meta name="title" content="Uro-scan" />
     <meta
       name="description"
-      content="KapitalMultiplier is your trusted partner for buying and selling residential, commercial, and plot properties along the Yamuna Expressway. Discover top investment opportunities today."
+      content="Uro-scan is health care device that searching. Discover top investment opportunities today."
     />
 
     <!-- Add these after your existing meta tags -->
@@ -27,17 +24,17 @@
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
-    <link rel="canonical" href="https://www.kapitalmultiplier.com/" />
-    <meta name="author" content="KapitalMultiplier" />
+    <link rel="canonical" href="https://uroscan.vercel.app/" />
+    <meta name="author" content="Uro-scan" />
     <meta name="geo.region" content="IN-UP" />
-    <meta name="geo.placename" content="Yamuna Expressway, Noida" />
+    <meta name="geo.placename" content="Punjab, Ludhiana" />
     <meta name="geo.position" content="28.5355;77.3910" />
     <meta name="ICBM" content="28.5355, 77.3910" />
 
     <!-- Enhanced keywords -->
     <meta
-      name="keywords"
-      content="KapitalMultiplier, Yamuna Expressway property, Noida real estate, buy property Yamuna Expressway, sell property Noida, commercial property Yamuna Expressway, residential plots Noida, property investment Delhi NCR"
+      name="description"
+      content="Uro-Scan is an advanced health monitoring device designed to detect early signs of medical issues, helping users stay fit and prevent serious incidents before they occur. A smart and reliable solution for lifelong wellness."
     />
 
     <!-- Preconnect for performance -->
@@ -46,16 +43,16 @@
 
     <!-- Twitter -->
     <meta property="googletagmanager" content="" />
-    <meta property="google:url" content="https://www.kapitalmultiplier.com/" />
+    <meta property="google:url" content="https://uroscan.vercel.app/" />
     <meta
       property="google:title"
       content="KapitalMultiplier – Buy & Sell Property on Yamuna Expressway"
     />
     <meta
       property="google:description"
-      content="Buy or sell your next property on Yamuna Expressway. Trusted real estate solutions with KapitalMultiplier."
+      content="Uro-Scan is an advanced health monitoring device designed to detect early signs of medical issues, helping users stay fit and prevent serious incidents before they occur. A smart and reliable solution for lifelong wellness."
     />
-    <meta property="google:image" content="https://www.kapitalmultiplier.com" />
+    <meta property="google:image" content="https://uroscan.vercel.app/" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
