--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <meta property="googletagmanager" content="" />
     <meta property="google:url" content="https://uroscan.vercel.app/" />
     <meta
-      property="google:title"
-      content="KapitalMultiplier – Buy & Sell Property on Yamuna Expressway"
+      name="description"
+      content="Uro-Scan – Save your life by detecting kidney-related problems early, even before you become a kidney patient."
     />
+
     <meta
       property="google:description"
       content="Uro-Scan is an advanced health monitoring device designed to detect early signs of medical issues, helping users stay fit and prevent serious incidents before they occur. A smart and reliable solution for lifelong wellness."
@@ -61,9 +62,9 @@
         "@graph": [
           {
             "@type": "Organization",
-            "name": "KapitalMultiplier",
-            "url": "https://www.kapitalmultiplier.com",
-            "logo": "https://www.kapitalmultiplier.com/src/assets/brand/Brand.png",
+            "name": "Uro-scan",
+            "url": "https://uroscan.vercel.app/",
+            "logo": "https://uroscan.vercel.app/src/assets/brand/Brand.png",
             "description": "Leading real estate company specializing in Yamuna Expressway properties. Buy and sell residential, commercial, and plot properties in Noida and Delhi NCR.",
             "address": {
               "@type": "PostalAddress",
@@ -72,16 +73,15 @@
               "addressLocality": "Noida"
             },
             "areaServed": [
-              "Yamuna Expressway",
-              "Noida",
-              "Greater Noida",
-              "Delhi NCR"
+              "India",
+              "Punjab",
+              "Ludhiana"
             ],
             "serviceType": [
-              "Real Estate Sales",
-              "Property Investment",
-              "Commercial Property",
-              "Residential Property"
+              "manufacturing",
+              "ReSearcher",
+              "Health Care",
+              "Start Up"
             ],
             "sameAs": [
               "https://www.facebook.com/profile.php?id=61573755702740",
@@ -90,24 +90,24 @@
           },
           {
             "@type": "WebSite",
-            "name": "KapitalMultiplier",
-            "url": "https://www.kapitalmultiplier.com",
+            "name": "Uro-Scan",
+            "url": "https://uroscan.vercel.app/",
             "potentialAction": {
               "@type": "SearchAction",
-              "target": "https://www.kapitalmultiplier.com/search?q={search_term_string}",
+              "target": "https://uroscan.vercel.app/search?q={search_term_string}",
               "query-input": "required name=search_term_string"
             }
           },
           {
             "@type": "LocalBusiness",
-            "name": "KapitalMultiplier",
-            "@id": "https://www.kapitalmultiplier.com",
-            "url": "https://www.kapitalmultiplier.com",
-            "image": "https://www.kapitalmultiplier.com/src/assets/brand/Brand.png",
-            "priceRange": "₹₹₹",
+            "name": "Uro-scan",
+            "@id": "https://uroscan.vercel.app/,
+            "url": "https://uroscan.vercel.app/,
+            "image": "https://uroscan.vercel.app/src/assets/brand/Brand.png",
+            "priceRange": "Comming-soon",
             "address": {
               "@type": "PostalAddress",
-              "addressRegion": "UP",
+              "addressRegion": "PB",
               "addressCountry": "IN"
             },
             "geo": {
@@ -116,7 +116,7 @@
               "longitude": "77.3910"
             },
             "openingHours": "Mo-Su 09:00-18:00",
-            "telephone": "+91-XXXXXXXXXX"
+            "telephone": "+91-8416847643"
           }
         ]
       }
